--- a/PSSharp.ParameterExtensions/Properties/Resources.resx
+++ b/PSSharp.ParameterExtensions/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="SetCompletion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\setcompletion.ps1;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="VariableNameCompletion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\variablenamecompletion.ps1;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
