--- a/PSSharp.Core/Properties/Resources.resx
+++ b/PSSharp.Core/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CommandParameterCompletion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\commandparametercompleterscript.ps1;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="FileContentCompletion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\filecontentcompletion.ps1;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
